package.json setup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "testove",
+  "version": "1.0.0",
+  "main": "index.js",
   "dependencies": {
     "sqlite3": "^5.1.6"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
