--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "parser": "node scripts/parse-and-populate-db.js",
     "start": "node index"
   },
   "author": "",
